added new http endpoint which returns the text for a given date. reformated code with 4 tab-spaces instead of 2.

--- a/config.yml
+++ b/config.yml
@@ -25,4 +25,5 @@ data-path-suffix: ".txt"
 # HTTP server
 http-listen-port: 8080
 find-path: "/find"
+file-path: "/file"
 http-date-format: "%Y.%m.%d"
