--- a/config.yml
+++ b/config.yml
@@ -25,5 +25,5 @@ data-path-suffix: ".txt"
 # HTTP server
 http-listen-port: 8080
 find-path: "/find"
-file-path: "/file"
+text-path: "/text"
 http-date-format: "%Y.%m.%d"
