--- a/config/config.yml
+++ b/config/config.yml
@@ -7,8 +7,8 @@ per-date-path-format: "%Y%m%d"
 per-date-search-for-subpage: "tagesschau"
 
 date-format: "%Y.%m.%d"
-start-date: 2021.01.01
-end-date: 2021.01.25
+start-date: 2021.01.25
+end-date: latest
 
 # for some dates, we expect the web scraping to fail for various reasons.
 # Hence we do not want to raise an error, when processing these dates
