Added containerized web server. Added containerized hot reloading devmode for the web server. Added --dev argument to startup script. Improved names. Updated README with newest changes.

--- a/config/config.yml
+++ b/config/config.yml
@@ -23,8 +23,11 @@ data-path-suffix: ".txt"
 
 
 # HTTP server
-http-listen-port: 11000
+api-port: 11000
 find-path: "/find"
 text-path: "/text"
 sum-path: "/sum"
 http-date-format: "%Y.%m.%d"
+
+# Webserver
+web-port: 80
