--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,9 +1,8 @@
 FROM node:14-alpine
+RUN npm install -g serve
 WORKDIR web
 COPY web/package.json ./
 COPY web/package-lock.json ./
 RUN npm ci
-COPY web/* ./
-# TODO: add install statements according to vue-cli-service?
+COPY web ./
 RUN npm run build
-CMD npm start
