--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.22.3",
     "lodash": "^4.17.21",
-    "vue": "^2.6.14"
+    "vue": "^3.2.33"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.17",
@@ -18,8 +18,7 @@
     "@vue/cli-service": "~4.5.17",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.14"
+    "eslint-plugin-vue": "^6.2.2"
   },
   "eslintConfig": {
     "root": true,
