--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,8 +1,13 @@
-FROM node:14-alpine
-RUN npm install -g serve
+FROM node:16-alpine as builder
 WORKDIR web
+RUN npm install -g serve
 COPY web/package.json ./
 COPY web/package-lock.json ./
 RUN npm ci
 COPY web ./
 RUN npm run build
+
+FROM nginx:mainline-alpine as final
+WORKDIR web
+COPY  web/nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /web/dist /web/dist
