--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,8 +6,8 @@ services:
     container_name: tagesschau-web
     image: tagesschau-web:dev
     ports:
-      - ${WEB_PORT}:${WEB_PORT}
-    command: npm run serve -- --port ${WEB_PORT}
+      - ${WEB_PORT}:80
+    command: npm run serve -- --port 80
     volumes:
       - ${PWD}/web/src:/web/src
     networks:
