--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,9 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
+    "@babel/core": "^7.18.9",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^8.20.0"
   },
   "eslintConfig": {
