--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.18.13",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
+    "cypress": "^10.7.0",
     "eslint": "^8.23.0"
   },
   "eslintConfig": {
