--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "cypress": "^10.7.0",
-    "eslint": "^8.23.0"
+    "eslint": "^8.23.0",
+    "typescript": "^4.8.3"
   },
   "eslintConfig": {
     "root": true,
